# telegram-bot-template

./: .env_example  pyproject.toml
alembic/: env.py
src/: main.py
src/core/: config.py
src/core/models/: __init__.py  base.py
src/core/storage/: db_healper.py
src/middlewares/: __init__.py  database.py  logging_ctx.py  request_id.py
src/utils/: logger.py  observability.py  scheduler.py
src/web/: app.py  lifespan.py  runtime.py
src/web/routes/: health.py  payments.py  telegram.py
